[project]
name = "happiness-finder-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chickenta2ta", email = "tishizuka1906@icloud.com" }
]
dependencies = [
    "Flask>=3.0.0",
    "torch>=2.1.0",
    "ultralytics>=8.0.194",
    "flask-cors>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"
